--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "ISC"
+  "author": "The Bread Man",
+  "license": "ISC",
+  "repository": {
+	  "type": "git",
+	  "url": "https://github.com/kinostl/bread-first-search"
+  }
 }
